# Cweb

./: CMakeLists.txt  README.md  main.c  start_cweb_project.c  var.h
demos/Simple-videos-show/: main.c
demos/simple-page-admin/: index.html  main.c
include/: api_connect.h  archives.h  base_data.h  cdo.h  cweb.h  html.h  http.h  json.h  server.h  smtp.h  sqlite.h  var.h
src/: api.c  cdo.c  cweb.c  files.c  http.c  json.c  main.c  server.c  smtp.c
test/: memory.c
test/api/: main.c
test/api/pages/: index.html
test/server/: main.c
test/server/page/: dashboard.html  error404.html  registro.html
